# deskfield

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/app/: DeskfieldApp.cpp  DeskfieldApp.h  DeskfieldMode.h
src/canvas/: CanvasHostWindow.cpp  CanvasHostWindow.h
src/capture/: CapturedWindow.cpp  CapturedWindow.h  GraphicsCaptureManager.cpp  GraphicsCaptureManager.h
src/features/: LayoutApplier.cpp  LayoutApplier.h  NativeLayoutSynchronizer.cpp  NativeLayoutSynchronizer.h
src/input/: InputRouter.cpp  InputRouter.h  WindowHitTester.cpp  WindowHitTester.h
src/overlay/: CanvasHostWindow.cpp  CanvasHostWindow.h  OverlayWindow.cpp  OverlayWindow.h
src/platform/: Direct3DWinRtInterop.cpp  Direct3DWinRtInterop.h  GraphicsCaptureInterop.cpp  GraphicsCaptureInterop.h  Win32Dpi.cpp  Win32Dpi.h
src/rendering/: CanvasGridRenderer.cpp  CanvasGridRenderer.h  CapturedWindowRenderer.cpp  CapturedWindowRenderer.h  D3DCanvasRenderer.cpp  D3DCanvasRenderer.h  D3DDevice.cpp  D3DDevice.h  GdiDebugCanvasRenderer.cpp  GdiDebugCanvasRenderer.h  ICanvasRenderer.h  VisualWindowDrawItem.h
src/windowing/: SourceWindowHost.cpp  SourceWindowHost.h  WindowController.cpp  WindowController.h  WindowEnumerator.cpp  WindowEnumerator.h  WindowInfo.h  WindowSnapshot.h  WindowStateTracker.cpp  WindowStateTracker.h
src/workspace/: CanvasCameraController.cpp  CanvasCameraController.h  CanvasTypes.h  ViewportMapper.cpp  ViewportMapper.h  WindowId.h  WindowRegistry.cpp  WindowRegistry.h  WorkspaceModel.cpp  WorkspaceModel.h
